objects/Bulletin_Delivery_Job__c.object
<CustomObject>
    <fields>
        <fullName>Business_Area__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Power CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Power OC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Power CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Power OC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts &amp; Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVG Valves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steering</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Org__c</fullName>
        <label>Business Org</label>
        <picklist>
            <picklistValues>
                <fullName>Integrated</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Comatrol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turolla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valmova</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schwarzmuller</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Corrective_Bulletin_Delivery_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>link to BDJ correcting a defective BDJ</description>
        <label>Correction Bulletin Delivery Job</label>
        <referenceTo>Bulletin_Delivery_Job__c</referenceTo>
        <relationshipLabel>Bulletin Delivery Jobs (Corrective Bulletin Delivery Job)</relationshipLabel>
        <relationshipName>Bulletin_Delivery_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Defect_Correction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Defect Correction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Defect_Formula__c</fullName>
        <formula>Defect_Correction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defect Correction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Defective_Bulletin_Delivery_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Defective Bulletin Delivery Job</label>
        <referenceTo>Bulletin_Delivery_Job__c</referenceTo>
        <relationshipLabel>Defective Bulletin Delivery Jobs</relationshipLabel>
        <relationshipName>Defective_Bulletin_Delivery_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PIB_Number__c</fullName>
        <label>PIB Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Formula__c</fullName>
        <description>This field is used in Batch class because picklist does order by based on order defined in picklist not alphabetically.</description>
        <formula>TEXT(Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is used in Batch class because picklist does order by based on order defined in picklist not alphabetically.</inlineHelpText>
        <label>Status (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <recordTypes>
        <fullName>Defect_Correction</fullName>
        <active>true</active>
        <description>Used for a BDJ that is a DEFECT CORRECTION job</description>
        <label>Defect Correction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <validationRules>
        <fullName>Defective_Bulletin_Delivery_Job_Required</fullName>
        <active>true</active>
        <description>Defective Bulletin Delivery Job is required if Defect Correction&quot; is set to &quot;true&quot;.</description>
        <errorConditionFormula>AND(ISBLANK(Defective_Bulletin_Delivery_Job__c), Defect_Correction__c )</errorConditionFormula>
        <errorDisplayField>Defective_Bulletin_Delivery_Job__c</errorDisplayField>
        <errorMessage>Please select Defective Bulletin Delivery Job.</errorMessage>
    </validationRules>
</CustomObject>